langtools/test/tools/javac/generics/diamond/7002837/T7002837.out
T7002837.java:13:19: compiler.warn.diamond.redundant.args.1: T7002837<java.lang.Integer>, T7002837<java.lang.Object&java.io.Serializable&java.lang.Comparable<?>>
- compiler.err.warnings.and.werror
1 error
1 warning
